--- a/web_frontend/package.json
+++ b/web_frontend/package.json
@@ -4,5 +4,8 @@
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7"
+  },
+  "dependencies": {
+    "trunk": "^1.1.0"
   }
 }
