--- a/web_frontend/Cargo.toml
+++ b/web_frontend/Cargo.toml
@@ -18,10 +18,5 @@ log = "0.4.17"
 wasm-logger = "0.2.0"
 gloo-timers = { version = "0.2.4", features = ["futures"] }
 serde-tuple-vec-map = "1.0.1"
-web-sys = { version = "0.3.60", features = [
-  "Document",
-  "HtmlHeadElement",
-  "Element",
-  "NamedNodeMap",
-] }
+web-sys = { version = "0.3.69", features = ["InputEvent",  "InputEventInit", "HtmlSelectElement"]}
 reqwasm = "0.5.0"
