--- a/privaxy/Cargo.toml
+++ b/privaxy/Cargo.toml
@@ -53,3 +53,6 @@ once_cell = "1.16.0"
 serde-tuple-vec-map = "1.0.1"
 base64 = "0.13.1"
 warp = "0.3.7"
+sha2 = "0.10.8"
+hex = "0.4.3"
+serde_with = "3.8.1"
