--- a/web_frontend/Cargo.toml
+++ b/web_frontend/Cargo.toml
@@ -20,3 +20,5 @@ gloo-timers = { version = "0.2.4", features = ["futures"] }
 serde-tuple-vec-map = "1.0.1"
 web-sys = { version = "0.3.69", features = ["InputEvent",  "InputEventInit", "HtmlSelectElement"]}
 reqwasm = "0.5.0"
+serde_with = "3.8.1"
+url = "2.5.0"
