--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: CI
+# See https://help.github.com/en/actions/reference/events-that-trigger-workflows
 on: [push, pull_request]
 jobs:
   clippy_check:
@@ -30,7 +31,7 @@ jobs:
       - name: Install node
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
       - name: Install node packages
         working-directory: ./web_frontend
         run: npm i
@@ -67,7 +68,7 @@ jobs:
           args: --all -- --check
 
   ci:
-    name: CI
+    name: Build
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -80,10 +81,6 @@ jobs:
             os: ubuntu-latest
             rust: stable
             target: aarch64-unknown-linux-gnu
-          - build: windows
-            os: windows-latest
-            rust: stable
-            target: x86_64-pc-windows-msvc
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -91,7 +88,7 @@ jobs:
       - name: Cache build artifacts
         uses: actions/cache@v3
         with:
-          key:  no_gui-${{ matrix.os }}-${{ matrix.target }}-artifacts
+          key:  ${{ matrix.os }}-${{ matrix.target }}-artifacts
           path: |
             ./target
             ~/.cargo
@@ -105,89 +102,33 @@ jobs:
 
       - name: Install rust target
         run: rustup target add ${{ matrix.target }}
-
       - name: Install cross build dependencies
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu libc6-dev-arm64-cross
       - name: Install node
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
       - name: Install node packages
         working-directory: ./web_frontend
         run: npm i
-
-      # We need to build the web frontend otherwise, we will not be able to compile
-      # the server and checks will fail.
-      - name: Build web frontend
-        run: trunk build
-      - name: Build server
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --target ${{ matrix.target }} --bin privaxy --target-dir target
-
-      - uses: actions/upload-artifact@v3
-        if: matrix.os != 'windows-latest'
-        with:
-          name: privaxy_nogui-${{ matrix.target }}
-          path: |
-            target/${{ matrix.target }}/release/privaxy
-  ci_desktop:
-    name: CI Desktop
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - build: linux
-            os: ubuntu-latest
-            rust: stable
-          - build: windows
-            os: windows-latest
-            rust: stable
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Cache build artifacts
-        uses: actions/cache@v3
-        with:
-          key:  gui-${{ matrix.os }}-artifacts
-          path: |
-            ./target
-            ~/.cargo
-
-      - name: Install rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.rust }}
-          profile: minimal
-          override: true
-
       - name: Install trunk
         uses: actions-rs/cargo@v1
         with:
           command: install
           args: --locked --debug trunk
-
-      - name: Install webassembly rust target
-        run: rustup target add wasm32-unknown-unknown
-
-      # Required for tailwindcss
-      - name: Install node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
-      - if: startsWith(matrix.os, 'ubuntu') == true
-        name: Install gui library packages
-        run: sudo apt-get update && sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential libayatana-appindicator3-dev librsvg2-dev libgtk-3-dev libsoup2.4-dev libjavascriptcoregtk-4.0-dev
-        
-      - name: Install node packages
-        working-directory: ./web_frontend
-        run: npm i
-      # It is required to first build the frontend as the server won't
-      # build if it has no access to frontend's dist directory.
       - name: Build web frontend
         run: trunk build --release
         working-directory: ./web_frontend
+      - name: Build server
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          working-directory: .
+          args: --release --target ${{ matrix.target }} --bin privaxy --target-dir target
+      - uses: actions/upload-artifact@v3
+        if: matrix.os != 'windows-latest'
+        with:
+          name: privaxy-${{ matrix.target }}
+          path: |
+            target/${{ matrix.target }}/release/privaxy
