--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,8 +126,13 @@ jobs:
           command: build
           working-directory: .
           args: --release --target ${{ matrix.target }} --bin privaxy --target-dir target
+      - name: Build deb
+        run: cargo install cargo-deb && cargo deb -p privaxy --target ${{ matrix.target }} -o target/${{ matrix.target }}/release
+      - uses: actions/upload-artifact@v3           
+        with:
+          name: privaxy-deb-${{ matrix.target }}
+          path: target/${{ matrix.target }}/release/privaxy_*.deb
       - uses: actions/upload-artifact@v3
-        if: matrix.os != 'windows-latest'
         with:
           name: privaxy-${{ matrix.target }}
           path: |
