--- a/privaxy/Cargo.toml
+++ b/privaxy/Cargo.toml
@@ -29,7 +29,7 @@ path = "src/server/lib.rs"
 hyper = { version = "0.14.23", features = ["full"] }
 tokio = { version = "1.22.0", features = ["full"] }
 serde_json = "1.0.89"
-toml = "0.5.9"
+toml = "0.8.13"
 serde = { version = "1.0.148", features = ["derive"] }
 tokio-util = { version = "0.7.4", features = ["full"] }
 adblock = { version = "0.8.9" }
@@ -48,13 +48,13 @@ env_logger = "0.11.3"
 uluru = "3.0.0"
 regex = "1.7.0"
 lazy_static = "1.4.0"
-lol_html = "0.3.1"
+lol_html = "1.2.1"
 crossbeam-channel = "0.5.6"
 thiserror = "1.0.37"
 url = "2.3.1"
 futures = "0.3.25"
 dirs = "4.0.0"
-async-compression = { version = "0.3.15", features = ["futures-io", "gzip"] }
+async-compression = { version = "0.4.11", features = ["futures-io", "gzip"] }
 reqwest = { version = "0.11.13", features = [
   "stream",
   "rustls-tls",
@@ -65,8 +65,9 @@ reqwest = { version = "0.11.13", features = [
 ] }
 once_cell = "1.16.0"
 serde-tuple-vec-map = "1.0.1"
-base64 = "0.13.1"
+base64 = "0.22.1"
 warp = "0.3.7"
 sha2 = "0.10.8"
 hex = "0.4.3"
 serde_with = "3.8.1"
+filterlists-api = { path = "../filterlists-api", features = ["reqwest"] }
