CA from web ui, dpkg (#10)
* loop cfg

* ca route

* lf

* no need

* pkg

--- a/privaxy/Cargo.toml
+++ b/privaxy/Cargo.toml
@@ -16,10 +16,11 @@ opt-level = 3
 [package.metadata.deb]
 maintainer = "Josh McDaniel <80354972+joshrmcdaniel@users.noreply.github.com>"
 license-file = ["../LICENSE.txt", "4"]
+maintainer-scripts = "debian/"
 depends = "$auto"
 assets = [
-  ["../debian/privaxy.service", "/lib/systemd/system/privaxy.service", "644"],
-  ["target/release/privaxy", "/usr/local/bin/", "755"],
+  ["debian/privaxy.service", "/lib/systemd/system/privaxy.service", "644"],
+  ["target/release/privaxy", "/usr/bin/", "755"],
 ]
 
 [[bin]]
